deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laravel-app-deployment
  namespace: backend
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: laravel-app
  template:
    metadata:
      labels:
        app: laravel-app
    spec:
      containers:
        - name: laravel-app
          image: aswadwk/laravel-app:latest
          resources:
            requests:
              memory: "500Mi"
              cpu: "250m"
            limits:
              memory: "600Mi"
              cpu: "500m"
          ports:
            - containerPort: 8000

---
apiVersion: v1
kind: Service
metadata:
  name: laravel-service
  namespace: backend
spec:
  # type: LoadBalancer
  selector:
    app: laravel-app
  ports:
    - port: 8080 # Service port
      targetPort: 8000 # Container port
      # nodePort: 30080 # Node port Otomatis membuat ClusterIP juga

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: laravel-app-ingress
  labels:
    name: laravel-app-ingress
  namespace: backend
spec:
  rules:
    - host: aswad.local
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: laravel-service
                port:
                  number: 8080
